# fastapi_demo

./: .gitignore  dev.sh  pyproject.toml
llm/: database.py  env.py  log.py  main.py  models.py
llm/models/: auths.py  todos.py  users.py
llm/routes/: auth.py  auths.py  users.py
llm/static/js/: base.js
llm/templates/: layout.html  login.html  register.html
llm/utils/: auth.py  dotenv.py  newHTTPException.py
logs/: log.log.2025-03-25
